# ChessManager

./: .gitignore  CMakeLists.txt  README.md  chesstournament.cpp  chesstournament.h  controller.cpp  controller.h  database.cpp  database.h  line.cpp  line.h  line.patch  linebutton.cpp  linebutton.h  main.cpp  player.cpp  player.h  server.cpp  server.h  serverview.cpp  serverview.h  talktoclient.cpp  talktoclient.h  view.cpp  view.h  view.patch
